<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tiemahshoo.appportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_streamer"
        android:id="@+id/btn_streamer"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#f08c35" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_scores"
        android:id="@+id/btn_scores"
        android:background="#F08C35"
        android:layout_below="@+id/btn_streamer"
        android:layout_alignStart="@+id/btn_streamer"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_library"
        android:id="@+id/btn_library"
        android:background="#F08C35"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_below="@+id/btn_scores"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_bigger"
        android:id="@+id/btn_bigger"
        android:background="#F08C35"
        android:layout_below="@+id/btn_library"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_reader"
        android:id="@+id/btn_reader"
        android:background="#F08C35"
        android:layout_below="@+id/btn_bigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone"
        android:id="@+id/btn_capstone"
        android:background="#ec1c76"
        android:layout_below="@+id/btn_reader"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" />
</RelativeLayout>
